# bamboofilters

./: CMakeLists.txt  README.md
src/: CMakeLists copy.txt  CMakeLists.txt  ecoli_parser.cpp  ecoli_parser.h  run_ecoli.cpp
src/bamboofilter/: bamboofilter.hpp  bitsutil.h  predefine.h  segment.hpp
src/common/: BOBHash.cpp  BOBHash.h  bithack.h  random.h  timer.hpp  timing.h
test/: CMakeLists.txt  evaluation.cpp  example.cpp
tools/: CMakeLists.txt  download_ecoli.sh
